add readheader, handledynamicapiroute, readrequestbody, parsebody, parseJsonBody this all method